feature: add unit test to fact package