@@ -20,6 +20,7 @@ import tw.commonground.backend.shared.pagination.WrappedPaginationResponse;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Paths;
 import java.util.*;
 
 @Service
@@ -140,7 +141,7 @@ public class FactService {
         }
     }
 
-    private Set<ReferenceEntity> parseReferenceEntity(List<String> urls) {
+    protected Set<ReferenceEntity> parseReferenceEntity(List<String> urls) {
         urls = urlHandling(urls);
 
         Set<ReferenceEntity> referenceEntities = new HashSet<>();
@@ -148,37 +149,37 @@ public class FactService {
 
         for (String urlString : urls) {
             referenceRepository.findByUrl(urlString).ifPresentOrElse(referenceEntities::add,
-                    () -> {
-                        ReferenceEntity referenceEntity = new ReferenceEntity(urlString);
-                        try {
-                            Document document = Jsoup.connect(urlString).get();
-                            referenceEntity.setTitle(document.title());
+                () -> {
+                    ReferenceEntity referenceEntity = new ReferenceEntity(urlString);
+                    try {
+                        Document document = Jsoup.connect(urlString).get();
+                        referenceEntity.setTitle(document.title());
 
-                            URL url = new URL(urlString);
-                            Element iconTag = document.selectFirst("link[rel~=(?i)^(icon|shortcut icon)$]");
+                        URL url = Paths.get(urlString).toUri().toURL();
+                        Element iconTag = document.selectFirst("link[rel~=(?i)^(icon|shortcut icon)$]");
 
-                            if (iconTag != null) {
-                                referenceEntity.setFavicon(iconTag.attr("href"));
-                            }
-
-                            iconTag = document.selectFirst("meta[itemprop~=(?i)^(image)]");
-                            if (iconTag != null) {
-                                String host = url.getHost();
-                                if (!host.startsWith("www.")) {
-                                    host = "www." + host;
-                                }
-
-                                String iconUrl = url.getProtocol() + "://" + host + iconTag.attr("content");
-                                referenceEntity.setFavicon(iconUrl);
-                            }
-
-                        } catch (Exception ignored) {
-                            referenceEntity.setFavicon("");
-                            referenceEntity.setTitle("");
+                        if (iconTag != null) {
+                            referenceEntity.setFavicon(iconTag.attr("href"));
                         }
 
-                        newReferenceEntities.add(referenceEntity);
+                        iconTag = document.selectFirst("meta[itemprop~=(?i)^(image)]");
+                        if (iconTag != null) {
+                            String host = url.getHost();
+                            if (!host.startsWith("www.")) {
+                                host = "www." + host;
+                            }
+
+                            String iconUrl = url.getProtocol() + "://" + host + iconTag.attr("content");
+                            referenceEntity.setFavicon(iconUrl);
+                        }
+
+                    } catch (Exception ignored) {
+                        referenceEntity.setFavicon("");
+                        referenceEntity.setTitle("");
                     }
+
+                    newReferenceEntities.add(referenceEntity);
+                }
             );
         }
 
@@ -188,7 +189,7 @@ public class FactService {
         return referenceEntities;
     }
 
-    private List<String> urlHandling(List<String> urls) {
+    protected List<String> urlHandling(List<String> urls) {
         List<String> decodedUrls = new ArrayList<>();
         for (String url : urls) {
             String decodedUrl = URLDecoder.decode(url, StandardCharsets.UTF_8);
